@@ -17,3 +17,5 @@ New in 0.1.6
 - Added clone method to VIVirtualMachine
 - Added get_question method to VM (returns object with question info and answer method)
 - Fix bug in get_vm_by_path
+- Added method get_datastores
+- Fix issue 3, 4
